--- a/common/CSS/melol.css
+++ b/common/CSS/melol.css
@@ -7,7 +7,7 @@
 	.padd5B{                          	/*Padding Bottom de 5 pixeles*/
 		padding-bottom: 5px;  
 	} 
-	.b3tableGrey {                         	/*Borde en tabla solido de 3 pixeles Color gris*/
+	.b3solidGrey {                         	/*Borde solido de 3 pixeles Color gris*/
 		border: 3px solid #a9a9a9;
 	}
 	.width25 {                        	/*Ancho 25 pixeles*/
